--- a/config/database.yml
+++ b/config/database.yml
@@ -23,25 +23,25 @@ default: &default
 
 development:
   <<: *default
-  database: rails_driver_development
+  database: <%= ENV['DB_DATABASE_DEV'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: rails_driver
+  username: <%= ENV['DB_USERNAME_DEV'] %>
 
   # The password associated with the postgres role (username).
-  #password:
+  password: <%= ENV['DB_PASSWORD_DEV'] %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: <%= ENV['DB_HOST_DEV'] %>
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: <%= ENV['DB_PORT_DEV'] %>
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -57,7 +57,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_driver_test
+  database: <%= ENV['DB_DATABASE_TEST'] %>
+  username: <%= ENV['DB_USERNAME_TEST'] %>
+  password: <%= ENV['DB_PASSWORD_TEST'] %>
+  host: <%= ENV['DB_HOST_TEST'] %>
+  port: <%= ENV['DB_PORT_TEST'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +84,8 @@ test:
 #
 production:
   <<: *default
-  database: rails_driver_production
-  username: rails_driver
-  password: <%= ENV['RAILS_DRIVER_DATABASE_PASSWORD'] %>
+  database: <%= ENV['DB_DATABASE_PROD'] %>
+  username: <%= ENV['DB_USERNAME_PROD'] %>
+  password: <%= ENV['DB_PASSWORD_PROD'] %>
+  host: <%= ENV['DB_HOST_PROD'] %>
+  port: <%= ENV['DB_PORT_PROD'] %>
